# django-data-mapper

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
data_mapper/: __init__.py  apps.py  mappers.py
data_mapper/management/commands/: import_xml.py
data_mapper/tests/: conftest.py  rss-feed-example.xml  test_xml_mapper.py
example_app/: models.py
example_app/migrations/: 0001_initial.py
example_project/settings/: common.py  local.py.example
