[metadata]
name = django-data-mapper
version = 1.0
description = Maps data from XML file to existing Django models.
long_description = file: README.md
keywords = django, mapper, xml, rss
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages =
    data_mapper
install_requires =
    Django>=2.0,<3.0

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=0

[tool:pytest]
DJANGO_SETTINGS_MODULE = example_project.settings
python_files = tests.py test_*.py *_tests.py
addopts = --cov

[coverage:run]
branch = True
source = data_mapper

[coverage:report]
ignore_errors = True
show_missing = True
